<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:id="@+id/add_operators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add" />

            <ImageView
                android:id="@+id/subtract_operators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_subtract" />
            <ImageView
                android:id="@+id/multiply_operators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_multiply" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_subtract" />
            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_multiply" />
        </LinearLayout>


        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_info"
            android:textColor="#ffffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/trial_btn"
            android:layout_marginTop="@dimen/margin_forty_eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_info"
            android:text="@string/trial"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@drawable/round_shaped_btn"/>

        <Button
            android:id="@+id/home_btn"
            android:layout_marginTop="@dimen/margin_forty_eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trial_btn"
            android:text="Home"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:background="@drawable/round_shaped_btn"/>

    </RelativeLayout>
</ScrollView>